--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
                             </li>
                             <li><a href="about.html">О нас</a></li>
                             <li class="has-submenu"><a href="shop.html">Товары</a>
-                                <ul class="sub-menu">
+                                <!-- <ul class="sub-menu">
                                     <li><a href="shop-left-sidebar.html">Shop Left Sidebar</a></li>
                                     <li><a href="shop-right-sidebar.html">Shop Right Sidebar</a></li>
                                     <li><a href="single-product.html">Single Product</a></li>
-                                </ul>
+                                </ul> -->
                             </li>
                             <li class="has-submenu"><a href="blog.html">blog</a>
                                 <ul class="sub-menu">
