--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                 </ul>
                             </li>
                             <li><a href="about.html">О нас</a></li>
-                            <li class="has-submenu"><a href="shop.html">Товары</a>
+                            <li class="has-submenu"><a href="shop.html">Каталог</a>
                                 <!-- <ul class="sub-menu">
                                     <li><a href="shop-left-sidebar.html">Shop Left Sidebar</a></li>
                                     <li><a href="shop-right-sidebar.html">Shop Right Sidebar</a></li>
