--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="row align-items-center">
                 <div class="col-sm-4 col-lg-2">
                     <div class="site-logo text-center text-sm-left">
-                        <a href="index.html"><img src="assets/img/logo.png" alt="Logo" /></a>
+                        <a href="./"><img src="assets/img/logo.png" alt="Logo" /></a>
                     </div>
                 </div>
 
