--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
                     <div class="site-navigation">
                         <ul class="main-menu nav">
                             <li class="has-submenu"><a href="index.html">Главная</a>
-                                <ul class="sub-menu">
+                                <!-- <ul class="sub-menu">
                                     <li><a href="#"></a></li>
                                     <li><a href="#"></a></li>
                                     <li><a href="#"></a></li>
-                                </ul>
+                                </ul> -->
                             </li>
                             <li><a href="about.html">О нас</a></li>
                             <li class="has-submenu"><a href="shop.html">Каталог</a>
@@ -100,8 +100,8 @@
                 <div class="col-sm-8 col-lg-3">
                     <div class="site-action d-flex justify-content-center justify-content-sm-end align-items-center">
                         <ul class="login-reg-nav nav">
-                            <li><a href="#">Login</a></li>
-                            <li><a href="#">Register</a></li>
+                            <li><a href="#">Вход</a></li>
+                            <li><a href="#">Регистрация</a></li>
                         </ul>
 
                         <div class="mini-cart-wrap">
@@ -178,7 +178,7 @@
                         <div class="col-lg-6">
                             <div class="slide-content">
                                 <div class="slide-content-inner">
-                                    <h3>NEW TECHNOLOGY & BUILD</h3>
+                                    <h3>НОВЫЕ КАТЕГОРИИ ТОВАРОВ</h3>
                                     <h2>WHEELS &amp; TIRES COLLECTIONS</h2>
                                     <a class="btn btn-white" href="shop.html">Shop Now</a>
                                 </div>
