--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
                         <div class="col-lg-6">
                             <div class="slide-content">
                                 <div class="slide-content-inner">
-                                    <h3>НОВЫЕ КАТЕГОРИИ ТОВАРОВ</h3>
-                                    <h2>WHEELS &amp; TIRES COLLECTIONS</h2>
+                                    <h3>НОВЫЕ ТЕХНОЛОГИИ УЖЕ В НАЛИЧИИ</h3>
+                                    <h2>КУПИ &amp; НАСЛАЖДАЙСЯ <br> УСПЕВАЙ</h2>
                                     <a class="btn btn-white" href="shop.html">Shop Now</a>
                                 </div>
                             </div>
@@ -193,8 +193,8 @@
                         <div class="col-12">
                             <div class="slide-content">
                                 <div class="slide-content-inner">
-                                    <h3>NEW TECHNOLOGY & BUILD</h3>
-                                    <h2>WHEELS &amp; TIRES <br> COLLECTIONS</h2>
+                                    <h3>НОВЫЕ ТИПЫ ТОВАРОВ</h3>
+                                    <h2>АНИМЕ &amp; СУПЕРГЕРОИ <br> КОСПЛЕЙ И НЕ ТОЛЬКО</h2>
                                         <a class="btn btn-white" href="shop.html">Shop Now</a>
                                 </div>
                             </div>
