--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     <!--== Start Slider Area Wrapper ==-->
     <div class="slider-area-wrapper">
         <div class="slider-content-active">
-            <div class="slider-slide-item bg-img" data-bg="assets/img/slider/slider-1.jpg">
+            <div class="slider-slide-item bg-img" data-bg="assets/img/slider/slider-1.png">
                 <div class="container container-wide h-100">
                     <div class="row align-items-center h-100">
                         <div class="col-lg-6">
@@ -187,7 +187,7 @@
                     </div>
                 </div>
             </div>
-            <div class="slider-slide-item bg-img" data-bg="assets/img/slider/slider-2.jpg">
+            <div class="slider-slide-item bg-img" data-bg="assets/img/slider/slider-2.png">
                 <div class="container container-wide h-100">
                     <div class="row align-items-center h-100">
                         <div class="col-12">
