--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                                 <div class="slide-content-inner">
                                     <h3>НОВЫЕ ТЕХНОЛОГИИ УЖЕ В НАЛИЧИИ</h3>
                                     <h2>КУПИ &amp; НАСЛАЖДАЙСЯ <br> УСПЕВАЙ</h2>
-                                    <a class="btn btn-white" href="shop.html">Shop Now</a>
+                                    <a class="btn btn-white" href="shop.html">К покупкам</a>
                                 </div>
                             </div>
                         </div>
@@ -195,7 +195,7 @@
                                 <div class="slide-content-inner">
                                     <h3>НОВЫЕ ТИПЫ ТОВАРОВ</h3>
                                     <h2>АНИМЕ &amp; СУПЕРГЕРОИ <br> КОСПЛЕЙ И НЕ ТОЛЬКО</h2>
-                                        <a class="btn btn-white" href="shop.html">Shop Now</a>
+                                        <a class="btn btn-white" href="shop.html">К покупкам</a>
                                 </div>
                             </div>
                         </div>
@@ -248,9 +248,8 @@
                             <img src="assets/img/icons/icon-1.png" alt="fast delivery">
                         </div>
                         <div class="call-to-action-item__info">
-                            <h3>Free Home Delivery</h3>
-                            <p>Provide free home delivery
-                                for all product over $100</p>
+                            <h3>Разные способы доставки</h3>
+                            <p>Доставка от 49 рублей по всей России</p>
                         </div>
                     </div>
                 </div>
@@ -261,9 +260,8 @@
                             <img src="assets/img/icons/icon-2.png" alt="quality">
                         </div>
                         <div class="call-to-action-item__info">
-                            <h3>Quality Products</h3>
-                            <p>We ensure our product
-                                quality all times</p>
+                            <h3>Отвечаем за качество</h3>
+                            <p>Мы не маркетплейс. Нам важно качество товара</p>
                         </div>
                     </div>
                 </div>
@@ -274,9 +272,8 @@
                             <img src="assets/img/icons/icon-3.png" alt="return">
                         </div>
                         <div class="call-to-action-item__info">
-                            <h3>Online Support</h3>
-                            <p>To satisfy our customer we try
-                                to give support online</p>
+                            <h3>Онлайн поддержка</h3>
+                            <p>Мы всегда рады ответить вам на вопросы в чате</p>
                         </div>
                     </div>
                 </div>
@@ -291,9 +288,8 @@
             <div class="row">
                 <div class="col-lg-5 m-auto text-center">
                     <div class="section-title">
-                        <h2 class="h3">Best Seller</h2>
-                        <p>All best seller product are now available for you and your can buy
-                            this product from here any time any where so sop now</p>
+                        <h2 class="h3">Популярное сегодня</h2>
+                        <p>Самые популярные товары в нашем магазине</p>
                     </div>
                 </div>
             </div>
