--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="banner-item">
                         <div class="banner-item__img">
-                            <a href="#"><img src="assets/img/banner/banner-1.jpg" alt="Banner" /></a>
+                            <a href="#"><img src="assets/img/banner/banner-1.png" alt="Banner" /></a>
                         </div>
                     </div>
                 </div>
