--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                             <li><a href="#">Регистрация</a></li>
                         </ul>
 
-                        <div class="mini-cart-wrap">
+                        <!-- <div class="mini-cart-wrap">
                             <a href="cart.html" class="btn-mini-cart">
                                 <i class="ion-bag"></i>
                                 <span class="cart-total">3</span>
@@ -161,7 +161,7 @@
                             <button class="btn-menu">
                                 <i class="fa fa-bars"></i>
                             </button>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
