--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
                     </div>
                 </div>
 
-                <div class="col-sm-8 col-lg-3">
+                <!-- <div class="col-sm-8 col-lg-3">
                     <div class="site-action d-flex justify-content-center justify-content-sm-end align-items-center">
                         <ul class="login-reg-nav nav">
                             <li><a href="#">Вход</a></li>
                             <li><a href="#">Регистрация</a></li>
-                        </ul>
+                        </ul> -->
 
                         <!-- <div class="mini-cart-wrap">
                             <a href="cart.html" class="btn-mini-cart">
@@ -162,8 +162,8 @@
                                 <i class="fa fa-bars"></i>
                             </button>
                         </div> -->
-                    </div>
-                </div>
+                    <!-- </div>
+                </div> -->
             </div>
         </div>
     </header>
