--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@
                                         <span><i class="ion-android-star"></i></span>
                                         <span><i class="ion-android-star-half"></i></span>
                                     </div>
-                                    <h4 class="title"><a href="single-product.html">Auto Clutch & Brake</a></h4>
-                                    <span class="price"><strong>Price:</strong> $165.00</span>
+                                    <h4 class="title"><a href="single-product.html">Портативная акустика Denmen DR07, с фонариком</a></h4>
+                                    <span class="price"><strong>Цена:</strong> 1750.00 ₽</span>
                                 </div>
 
                                 <div class="product-item__action">
