--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                             <div class="product-item">
                                 <div class="product-item__thumb">
                                     <a href="single-product.html">
-                                        <img class="thumb-primary" src="assets/img/product/product-1.png" alt="Product" />
+                                        <img class="thumb-primary" src="assets/img/product/denmen_dr07.jpg" alt="Product" />
                                         <img class="thumb-secondary" src="assets/img/product/product-2.png" alt="Product" />
                                     </a>
                                 </div>
