--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                                         <span><i class="ion-android-star"></i></span>
                                         <span><i class="ion-android-star-half"></i></span>
                                     </div>
-                                    <h4 class="title"><a href="single-product.html">Портативная акустика Denmen DR07, с фонариком</a></h4>
+                                    <h4 class="title"><a href="single-product.html">Портативная акустика Denmen DR07, с фонариком, черная</a></h4>
                                     <span class="price"><strong>Цена:</strong> 1750.00 ₽</span>
                                 </div>
 
@@ -349,8 +349,8 @@
                                         <span><i class="ion-android-star-half"></i></span>
                                         <span><i class="ion-android-star-half"></i></span>
                                     </div>
-                                    <h4 class="title"><a href="single-product.html">Leather Steering Wheel</a></h4>
-                                    <span class="price"><strong>Price:</strong> $615.00</span>
+                                    <h4 class="title"><a href="single-product.html">Браслет от комаров M2, черный</a></h4>
+                                    <span class="price"><strong>Price:</strong> 1750.00 ₽</span>
                                 </div>
 
                                 <div class="product-item__action">
