--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                             <div class="product-item">
                                 <div class="product-item__thumb">
                                     <a href="single-product.html">
-                                        <img class="thumb-primary" src="assets/img/product/product-3.png" alt="Product" />
+                                        <img class="thumb-primary" src="assets/img/product/smart_mosquit_M2.jpg" alt="Product" />
                                         <img class="thumb-secondary" src="assets/img/product/product-4.png" alt="Product" />
                                     </a>
                                 </div>
@@ -350,7 +350,7 @@
                                         <span><i class="ion-android-star-half"></i></span>
                                     </div>
                                     <h4 class="title"><a href="single-product.html">Браслет от комаров M2, черный</a></h4>
-                                    <span class="price"><strong>Price:</strong> 1750.00 ₽</span>
+                                    <span class="price"><strong>Цена:</strong> 1750.00 ₽</span>
                                 </div>
 
                                 <div class="product-item__action">
