--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                                 <div class="product-item__thumb">
                                     <a href="single-product.html">
                                         <img class="thumb-primary" src="assets/img/product/denmen_dr07.jpg" alt="Product" />
-                                        <img class="thumb-secondary" src="assets/img/product/product-2.png" alt="Product" />
+                                        <img class="thumb-secondary" src="assets/img/product/denmen_dr07.jpg" alt="Product" />
                                     </a>
                                 </div>
 
@@ -337,7 +337,7 @@
                                 <div class="product-item__thumb">
                                     <a href="single-product.html">
                                         <img class="thumb-primary" src="assets/img/product/smart_mosquit_M2.jpg" alt="Product" />
-                                        <img class="thumb-secondary" src="assets/img/product/product-4.png" alt="Product" />
+                                        <img class="thumb-secondary" src="assets/img/product/smart_mosquit_M2.jpg" alt="Product" />
                                     </a>
                                 </div>
 
@@ -346,8 +346,8 @@
                                         <span><i class="ion-android-star"></i></span>
                                         <span><i class="ion-android-star"></i></span>
                                         <span><i class="ion-android-star"></i></span>
-                                        <span><i class="ion-android-star-half"></i></span>
-                                        <span><i class="ion-android-star-half"></i></span>
+                                        <span><i class="ion-android-star"></i></span>
+                                        <!-- <span><i class="ion-android-star-half"></i></span> -->
                                     </div>
                                     <h4 class="title"><a href="single-product.html">Браслет от комаров M2, черный</a></h4>
                                     <span class="price"><strong>Цена:</strong> 990.00 ₽</span>
