--- a/index.html
+++ b/index.html
@@ -379,8 +379,8 @@
                                         <span><i class="ion-android-star"></i></span>
                                         <span><i class="ion-android-star"></i></span>
                                     </div>
-                                    <h4 class="title"><a href="single-product.html">Hanging 4K Camera</a></h4>
-                                    <span class="price"><strong>Price:</strong> $65.00</span>
+                                    <h4 class="title"><a href="single-product.html">Клавиатура портативная проводная ultra 909 с мультимедийными клавишами</a></h4>
+                                    <span class="price"><strong>Цена:</strong> 320.00 ₽</span>
                                 </div>
 
                                 <div class="product-item__action">
