--- a/index.html
+++ b/index.html
@@ -366,8 +366,8 @@
                             <div class="product-item">
                                 <div class="product-item__thumb">
                                     <a href="single-product.html">
-                                        <img class="thumb-primary" src="assets/img/product/product-4.png" alt="Product" />
-                                        <img class="thumb-secondary" src="assets/img/product/product-5.png" alt="Product" />
+                                        <img class="thumb-primary" src="assets/img/product/keyboard_ultra _909.jpg" alt="Product" />
+                                        <img class="thumb-secondary" src="assets/img/product/keyboard_ultra _909.jpg" alt="Product" />
                                     </a>
                                 </div>
 
