--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                             <!-- End Product Item -->
 
                             <!-- Start Product Item -->
-                            <div class="product-item">
+                            <!-- <div class="product-item">
                                 <div class="product-item__thumb">
                                     <a href="single-product.html">
                                         <img class="thumb-primary" src="assets/img/product/product-2.png" alt="Product" />
@@ -413,8 +413,8 @@
                                         <span><i class="ion-android-star"></i></span>
                                         <span><i class="ion-android-star-half"></i></span>
                                     </div>
-                                    <h4 class="title"><a href="single-product.html">17 inch Rims 8 Lug</a></h4>
-                                    <span class="price"><strong>Price:</strong> $165.00</span>
+                                    <h4 class="title"><a href="single-product.html">-</a></h4>
+                                    <span class="price"><strong>Цена:</strong> -.00 ₽</span>
                                 </div>
 
                                 <div class="product-item__action">
@@ -423,11 +423,11 @@
                                     <button class="btn-add-to-cart"><i class="ion-ios-heart-outline"></i></button>
                                     <button class="btn-add-to-cart"><i class="ion-eye"></i></button>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- End Product Item -->
 
                             <!-- Start Product Item -->
-                            <div class="product-item">
+                            <!-- <div class="product-item">
                                 <div class="product-item__thumb">
                                     <a href="single-product.html">
                                         <img class="thumb-primary" src="assets/img/product/product-5.png" alt="Product" />
@@ -443,8 +443,8 @@
                                         <span><i class="ion-android-star"></i></span>
                                         <span><i class="ion-android-star-half"></i></span>
                                     </div>
-                                    <h4 class="title"><a href="single-product.html">Locking Hub Diagram</a></h4>
-                                    <span class="price"><strong>Price:</strong> $165.00</span>
+                                    <h4 class="title"><a href="single-product.html">-</a></h4>
+                                    <span class="price"><strong>Цена:</strong> -.00 ₽</span>
                                 </div>
 
                                 <div class="product-item__action">
@@ -457,7 +457,7 @@
                                 <div class="product-item__sale">
                                     <span class="sale-txt">21%</span>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- End Product Item -->
                         </div>
                     </div>
