--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@
                             <div class="product-item">
                                 <div class="product-item__thumb">
                                     <a href="single-product.html">
-                                        <img class="thumb-primary" src="assets/img/product/denmen_dr07.jpg" alt="Product" />
-                                        <img class="thumb-secondary" src="assets/img/product/denmen_dr07.jpg" alt="Product" />
+                                        <img class="thumb-primary" src="assets/img/product/denmen_dr07.jpg" alt="Портативная акустика Denmen DR07, с фонариком, черная" />
+                                        <img class="thumb-secondary" src="assets/img/product/denmen_dr07.jpg" alt="Портативная акустика Denmen DR07, с фонариком, черная" />
                                     </a>
                                 </div>
 
@@ -336,8 +336,8 @@
                             <div class="product-item">
                                 <div class="product-item__thumb">
                                     <a href="single-product.html">
-                                        <img class="thumb-primary" src="assets/img/product/smart_mosquit_M2.jpg" alt="Product" />
-                                        <img class="thumb-secondary" src="assets/img/product/smart_mosquit_M2.jpg" alt="Product" />
+                                        <img class="thumb-primary" src="assets/img/product/smart_mosquit_M2.jpg" alt="Браслет от комаров M2, черный" />
+                                        <img class="thumb-secondary" src="assets/img/product/smart_mosquit_M2.jpg" alt="Браслет от комаров M2, черный" />
                                     </a>
                                 </div>
 
@@ -366,8 +366,8 @@
                             <div class="product-item">
                                 <div class="product-item__thumb">
                                     <a href="single-product.html">
-                                        <img class="thumb-primary" src="assets/img/product/keyboard_ultra _909.jpg" alt="Product" />
-                                        <img class="thumb-secondary" src="assets/img/product/keyboard_ultra _909.jpg" alt="Product" />
+                                        <img class="thumb-primary" src="assets/img/product/keyboard_ultra _909.jpg" alt="Клавиатура портативная проводная ultra 909 с мультимедийными клавишами" />
+                                        <img class="thumb-secondary" src="assets/img/product/keyboard_ultra _909.jpg" alt="Клавиатура портативная проводная ultra 909 с мультимедийными клавишами" />
                                     </a>
                                 </div>
 
