--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                 <div class="row">
                     <div class="col-12 text-center">
                         <div class="call-to-action-txt">
-                            <h2>ALL KINDS OF PARTS THAT YOU <br> NEED CAN FIND HERE</h2>
+                            <h2>Вы сможете найти товары <br> от популярных до бюджетных</h2>
                                 <a href="shop.html" class="btn btn-brand">Shop Now</a>
                         </div>
                     </div>
