--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                     <div class="col-12 text-center">
                         <div class="call-to-action-txt">
                             <h2>Вы сможете найти товары <br> от популярных до бюджетных</h2>
-                                <a href="shop.html" class="btn btn-brand">Shop Now</a>
+                                <a href="shop.html" class="btn btn-brand">Смотреть</a>
                         </div>
                     </div>
                 </div>
