--- a/index.html
+++ b/index.html
@@ -1082,7 +1082,7 @@
             <div class="off-canvas-content">
                 <div class="off-canvas-header">
                     <div class="logo">
-                        <a href="index.html"><img src="assets/img/logo.png" alt="Logo"></a>
+                        <a href="index.html" style="background-color: azure; border-radius: 20px;"><img src="assets/img/logo.png" alt="Logo"></a>
                     </div>
                     <div class="close-btn">
                         <button class="btn-close"><i class="ion-android-close"></i></button>
