--- a/index.html
+++ b/index.html
@@ -1041,12 +1041,12 @@
 
                     <div class="col-sm-6 col-lg-3">
                         <div class="widget-item">
-                            <h4 class="widget-title">Store Information</h4>
+                            <h4 class="widget-title">Информация о могазине</h4>
                             <div class="widget-body">
                                 <address>
                                     2005 Stokes Isle Apartment. 896, Washington 10010, USA <br>
                                 https://example.com <br>
-                                (+68) 120034509
+                                +7(951)447-23-07
                             </address>
                             </div>
                         </div>
