--- a/index.html
+++ b/index.html
@@ -1044,7 +1044,7 @@
                             <h4 class="widget-title">Информация о могазине</h4>
                             <div class="widget-body">
                                 <address>
-                                    2005 Stokes Isle Apartment. 896, Washington 10010, USA <br>
+                                    Челябинская область, Миасс 456300, Россия <br>
                                 https://example.com <br>
                                 +7(951)447-23-07
                             </address>
