--- a/index.html
+++ b/index.html
@@ -1014,11 +1014,11 @@
                             <h4 class="widget-title">Quicklink</h4>
                             <div class="widget-body">
                                 <ul class="widget-list">
-                                    <li><a href="#">About</a></li>
-                                    <li><a href="#">Blog</a></li>
-                                    <li><a href="#">Shop</a></li>
-                                    <li><a href="#">Cart</a></li>
-                                    <li><a href="#">Contact</a></li>
+                                    <li><a href="#">О нас</a></li>
+                                    <li><a href="#">Блог</a></li>
+                                    <li><a href="#">Магазин</a></li>
+                                    <li><a href="#">-</a></li>
+                                    <li><a href="#">Контактные данные</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -1026,14 +1026,14 @@
 
                     <div class="col-sm-6 col-lg-2">
                         <div class="widget-item">
-                            <h4 class="widget-title">Support</h4>
+                            <h4 class="widget-title">Поддержка</h4>
                             <div class="widget-body">
                                 <ul class="widget-list">
-                                    <li><a href="#">Blog</a></li>
-                                    <li><a href="#">Contact</a></li>
+                                    <li><a href="#">Блог</a></li>
+                                    <li><a href="#">Контактные данные</a></li>
                                     <li><a href="#">Return Policy</a></li>
-                                    <li><a href="#">Online Support</a></li>
-                                    <li><a href="#">Money Back</a></li>
+                                    <li><a href="#">Онлайн поддержка</a></li>
+                                    <li><a href="#">Возврат</a></li>
                                 </ul>
                             </div>
                         </div>
