--- a/index.html
+++ b/index.html
@@ -987,9 +987,10 @@
                         <div class="widget-item">
                             <div class="about-widget">
                                 <a href="index.html" style="background-color: azure; border-radius: 20px;"><img src="assets/img/logo-light.png" alt="Logo" /></a>
-                                <p>Lukas is the best parts shop for your car
-                                    accessories. What kind of parts do you
-                                    need you can get here soluta nobis</p>
+                                <p>DeviceHoster - мы отвечаем за качество товара.
+                                    У нас вы можете найти передовые девайсы.
+                                    Товары личных хобби: касплеи, фигурки и др. товары досуга.
+                                </p>
                             </div>
                         </div>
                     </div>
