--- a/index.html
+++ b/index.html
@@ -986,7 +986,7 @@
                     <div class="col-lg-3">
                         <div class="widget-item">
                             <div class="about-widget">
-                                <a href="index.html" style="background-color: azure; border-radius: 20px;"><img src="assets/img/logo-light.png" alt="Logo" /></a>
+                                <a href="index.html"><img src="assets/img/logo-light.png" alt="Logo" style="background-color: azure; border-radius: 20px;"/></a>
                                 <p>DeviceHoster - мы отвечаем за качество товара.
                                     У нас вы можете найти передовые девайсы.
                                     Товары личных хобби: касплеи, фигурки и др. товары досуга.
