--- a/index.html
+++ b/index.html
@@ -986,7 +986,7 @@
                     <div class="col-lg-3">
                         <div class="widget-item">
                             <div class="about-widget">
-                                <a href="index.html"><img src="assets/img/logo-light.png" alt="Logo" style="background-color: azure; border-radius: 20px;"/></a>
+                                <a href="index.html"><img src="assets/img/logo-light.png" alt="Logo" style="background-color: white; border-radius: 20px;"/></a>
                                 <p>DeviceHoster - мы отвечаем за качество товара.
                                     У нас вы можете найти передовые девайсы.
                                     Товары личных хобби: касплеи, фигурки и др. товары досуга.
@@ -997,14 +997,14 @@
 
                     <div class="col-sm-6 col-lg-2">
                         <div class="widget-item">
-                            <h4 class="widget-title">Information</h4>
+                            <h4 class="widget-title">Информация</h4>
                             <div class="widget-body">
                                 <ul class="widget-list">
-                                    <li><a href="#">Our company</a></li>
-                                    <li><a href="#">Contact us</a></li>
-                                    <li><a href="#">Our services</a></li>
-                                    <li><a href="#">Why We?</a></li>
-                                    <li><a href="#">Careers</a></li>
+                                    <li><a href="#">О компании</a></li>
+                                    <li><a href="#">Контактные данные</a></li>
+                                    <li><a href="#">Другие сервисы</a></li>
+                                    <li><a href="#">Кто мы?</a></li>
+                                    <li><a href="#">Карьера с нами</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -1046,7 +1046,7 @@
                             <div class="widget-body">
                                 <address>
                                     Челябинская область, Миасс 456300, Россия <br>
-                                https://example1.com <br>
+                                https://morozov-indastries.github.io/shop/ <br>
                                 +7(951)447-23-07
                             </address>
                             </div>
