--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center">
-                        <img src="assets/img/bg/bg-car.png" alt="Car" />
+                        <img src="assets/img/bg/xiaomi_big_baner.png" alt="Car" />
                     </div>
                 </div>
             </div>
@@ -945,31 +945,31 @@
                 <div class="col-12">
                     <div class="brand-logo-content">
                         <div class="brand-logo-item">
-                            <a href="#"><img src="assets/img/brand-logo/brand-1.png" alt="Logo" /></a>
+                            <a href="#"><img src="assets/img/brand-logo/brand-1.png" alt="-" /></a>
                         </div>
 
                         <div class="brand-logo-item">
-                            <a href="#"><img src="assets/img/brand-logo/brand-2.png" alt="Logo" /></a>
+                            <a href="#"><img src="assets/img/brand-logo/brand-2.png" alt="xiaomi" /></a>
                         </div>
 
                         <div class="brand-logo-item">
-                            <a href="#"><img src="assets/img/brand-logo/brand-3.png" alt="Logo" /></a>
+                            <a href="#"><img src="assets/img/brand-logo/brand-3.png" alt="Apple" /></a>
                         </div>
 
                         <div class="brand-logo-item">
-                            <a href="#"><img src="assets/img/brand-logo/brand-4.png" alt="Logo" /></a>
+                            <a href="#"><img src="assets/img/brand-logo/brand-4.png" alt="Marvel" /></a>
                         </div>
 
                         <div class="brand-logo-item">
-                            <a href="#"><img src="assets/img/brand-logo/brand-5.png" alt="Logo" /></a>
+                            <a href="#"><img src="assets/img/brand-logo/brand-5.png" alt="Аниме" /></a>
                         </div>
 
                         <div class="brand-logo-item">
-                            <a href="#"><img src="assets/img/brand-logo/brand-3.png" alt="Logo" /></a>
+                            <a href="#"><img src="assets/img/brand-logo/brand-3.png" alt="-" /></a>
                         </div>
 
                         <div class="brand-logo-item">
-                            <a href="#"><img src="assets/img/brand-logo/brand-1.png" alt="Logo" /></a>
+                            <a href="#"><img src="assets/img/brand-logo/brand-1.png" alt="-" /></a>
                         </div>
                     </div>
                 </div>
