--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center">
-                        <img src="assets/img/bg/xiaomi_big_baner.png" alt="Car" />
+                        <img src="assets/img/bg/xiaomi_big_baner.png" alt="xiaomi big banner" />
                     </div>
                 </div>
             </div>
