--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="promotion-code-banner-item mb-sm-30">
-                        <img src="assets/img/banner/banner-5.jpg" alt="Banner" />
+                        <img src="assets/img/banner/infinix-banner.png" alt="Banner" />
                     </div>
                 </div>
 
