--- a/index.html
+++ b/index.html
@@ -501,13 +501,13 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="promotion-code-banner-item mb-sm-30">
-                        <img src="assets/img/banner/infinix-banner.png" alt="infinix banner" />
+                        <img src="assets/img/bg/infinix-banner.png" alt="infinix banner" />
                     </div>
                 </div>
 
                 <div class="col-md-6">
                     <div class="promotion-code-banner-item">
-                        <img src="assets/img/banner/banner-6.jpg" alt="Banner" />
+                        <img src="assets/img/bg/banner-6.jpg" alt="Banner" />
                     </div>
                 </div>
             </div>
