--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
 
                 <div class="col-md-6">
                     <div class="promotion-code-banner-item">
-                        <img src="assets/img/bg/banner-6.jpg" alt="Banner" />
+                        <img src="assets/img/banner/banner-6.jpg" alt="Banner" />
                     </div>
                 </div>
             </div>
